# tgmt

./: .gitignore
graph/111/: ArgumentedTree.tex  JoinTree.tex  SplitTree.tex
graph/111/222/: FullTree.tex  JoinTree.tex  SplitTree.tex
idea_graph/: 思路3_TTK落地文档.md  技术文档_ActiveGraph简化流程.md  结果报告_两组参数对比.md
idea_graph/GNN/: .gitignore  GCN权重训练实施方案.md  GNN活性子图向量化实现说明.md  README.md  __init__.py  export_paraview_results.py  export_txt_paraview_no_torch.py  train_gnn_encoder.py  vectorize_active_subgraphs.py  活性子图向量化方案.md  组会汇报_GNN活性子图方法简述.md
idea_graph/active_graph_simplifier/: ActiveGraphMergeTreeSimplifier.cpp  ActiveGraphMergeTreeSimplifier.h  ActiveGraphPostProcess.cpp  ActiveGraphPostProcess.h  CMakeLists.txt  MergeTreeIO.cpp  MergeTreeIO.h  main.cpp
idea_graph/support_txt/: CMakeLists.txt  README.md  TreeTxtActiveGraphSimplifier.cpp
idea_iou/: README.md  TreeTxtIoUSimplifier.cpp  实验报告_简短.md
idea_ism/: IsmFieldBuilder.cpp  IsmFieldBuilder.h  IsmMergeTreeSimplifier.cpp  IsmMergeTreeSimplifier.h  MergeTreeIO.cpp  MergeTreeIO.h  README.md  SimilarityMetrics.cpp  SimilarityMetrics.h  ism_main.cpp  ism_output_stats.csv  run_wide_threshold_sweep.sh  visualize_merge_tree.py
idea_ism/origin_ism/: CMakeLists.txt  OriginIsmTreeSimplifier.cpp
idea_ism/support_txt/: CMakeLists.txt  README.md  TreeTxtIsmSimplifier.cpp
idea_ism/surface_vtp_ism/: common.py  run_surface_tree_ism.py  run_surface_tree_ism_single_component.py
idea_multibranch/: CMakeLists.txt  README.md  TreeTxtMultiBranchSimplifier.cpp  TreeTxtMultiBranchVolumeSimplifier.cpp  TreeTxtSaddleVolumeWeightedSimplifier.cpp  build_saddle.bat
paper-claude-new/: 7.15讨论方案.md  ConnectivityMergeTree.tex  IsoDemo.tex  SaddleDemo.tex  fig-framework.tex  main.tex  main.xdv  main2.tex  如何从轮廓树计算等值面亏格.docx  如何从轮廓树计算等值面亏格.html  如何从轮廓树计算等值面亏格.md  文献整理.md  论文重构方案.docx  轮廓树的亏格.docx
paper-latex/: main.tex
paper-latex-codex/: main.tex
reference_doc/: 2 相关研究与研究动机.md  2010_Flexible_isosurfaces_论文详解_Typora公式中文术语版.md  实验结果.md  思路.md  构建过程记录.md  研究综合汇总-组会.md  研究综合汇总.md  论文大纲.md  项目汇总整理.md
